# Oral_Cancer

./: .gitignore  DJANGO_WEB_APP_SUMMARY.md  PRD_OralCancerDetection.md  PRD_OralCancerDetection_Detailed.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  README_WEBAPP.md  convert_regnet_model.py  db.sqlite3  install_django_simple.bat  manage.py  predict.py  pyproject.toml  requirements.txt  requirements_clean.txt  results.json  run_server.bat  setup_database.bat  setup_django.bat  setup_django.py  setup_project.bat  test_prediction.py  test_setup.bat  train_optimized_regnet.py
accounts/: urls.py
apps/accounts/: views.py
apps/dashboard/: urls.py
apps/detection/: ml_models.py  urls.py  views.py
apps/pages/: urls.py  views.py
config/: django_requirements.txt  django_simple_requirements.txt  requirements.txt  requirements_django.txt
config/oralcancer_web/: asgi.py  settings.py  urls.py  wsgi.py
dashboard/: views.py
detection/: forms.py  models.py
docs/: DJANGO_SETUP_GUIDE.md  Dataset_Sources.md  PRODUCTION_DEPLOYMENT_GUIDE.md
ml_scripts/: organize_dataset.py  predict_dual_model.py  train_regnet.py
oralcancer_web/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: continue_setup.bat  fix_admin_access.py  quick_fix.bat  run_full_evaluation.bat  run_server.py  test_web_ui.py  train_models.sh
src/data/: preprocessing.py
src/evaluation/: compare_models.py
src/models/: architectures.py  architectures_optimized.py
src/training/: train.py
templates/: base.html
tests/: final_test.py  test_all_pages.py  test_both_models.py  test_django_setup.py
(+20 files in other folders)
